# DumberEngine

./: CMakeLists.txt  README.md
DumberEngine/: imgui.ini
DumberEngine/headers/: Engine.hpp
DumberEngine/headers/components/: GameObject.hpp  GuiComponent.hpp  IComponent.hpp  Transform.hpp
DumberEngine/headers/debug/: CubeDebug.hpp  DebugDraw.hpp  DebugOpenGl.hpp  TextureDebug.hpp
DumberEngine/headers/rendering/: Scene.hpp
DumberEngine/headers/systems/: Editor.hpp  ISystem.hpp
DumberEngine/headers/utils/: BetterNoise.hpp  IDragNDrop.hpp  MeshLoader.hpp  PerlinNoise.hpp  Physics.hpp  Utilities.hpp  (+1 more)
DumberEngine/sources/: CMakeLists.txt  Engine.cpp  Scene.cpp  main.cpp
DumberEngine/sources/components/: GameObject.cpp  Transform.cpp
DumberEngine/sources/components/physics/: BoxCollider.cpp  ConvexCollider.cpp  RigidBody.cpp
DumberEngine/sources/components/rendering/: Mesh.cpp  PointLight.cpp  SkyBox.cpp  StaticMesh.cpp
DumberEngine/sources/components/scripts/: Avatar.cpp  CameraScript.cpp  Chunk.cpp  PhysicsTest.cpp  World.cpp
DumberEngine/sources/debug/: CubeDebug.cpp  DebugDraw.cpp  TextureDebug.cpp
DumberEngine/sources/rendering/helper/: Shader.cpp  Time.cpp
DumberEngine/sources/rendering/postprocess/: HDR.cpp  PPNoParams.cpp  PPOutline.cpp  PostProcessStack.cpp
DumberEngine/sources/rendering/renderer/: Camera.cpp  IFbo.cpp  IWindow.cpp
DumberEngine/sources/rendering/renderer/opengl/: Fbo.cpp  GBuffer.cpp  InputManager.cpp  OpenGLRenderer.cpp  ShadowMapping.cpp  Texture.cpp  Texture2D.cpp  Vbo.cpp
DumberEngine/sources/systems/: Editor.cpp
DumberEngine/sources/systems/input/: IInputManager.cpp
DumberEngine/sources/systems/physics/: Physics.cpp
DumberEngine/sources/systems/rendering/: ShadowMapping.cpp
DumberEngine/sources/utils/: BetterNoise.cpp  PerlinNoise.cpp
lib/: BulletCollision.lib  BulletDynamics.lib  BulletDynamicsd.lib  BulletSoftBody.lib  LinearMath.lib  LinearMathd.lib  zlib.lib  zlibstatic.lib  zlibstaticd.lib
(+41 files in other folders)
